[package]
name = "rsln"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/wqld/rsln"
description = "Netlink library implemented in Rust that provides the netlink protocol based kernel interfaces"

[dependencies]
anyhow = "1.0"
libc = "0.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
ipnet = { version = "2.7.0", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.28.0", features = ["sched", "user"] }
derive_builder = "0.20.0"
sysctl = "0.5"
rayon = "1.9"
